--- a/src/sass/_components.scss
+++ b/src/sass/_components.scss
@@ -81,6 +81,15 @@
   }
 }
 
+// Custom Cursor
+.cursor {
+  position: absolute;
+  z-index: 1000;
+  width: 24px;
+  height: 24px;
+  border-radius: 100%;
+  background-color: $white;
+}
 
 // CTA
 .cta {
