--- a/src/sass/_layouts.scss
+++ b/src/sass/_layouts.scss
@@ -40,17 +40,24 @@
   display: flex;
   gap: cross-media(12px, 991px, 24px);
 
-  & a {
-    transition: color ease 300ms;
-    &:hover {
-      color: $accent;
-    }
-  }
+  // & li {
+  //   &:hover {
+  //     & a {
+  //       transition: color ease 300ms;
+  //       &:hover {
+  //         color: $accent;
+  //       }
+  //     }
+  //   }
+  // }
+
+
 
   &__list {
     display: flex;
     gap: cross-media(12px, 991px, 24px);
     position: relative;
+
 
     & ul {
       position: absolute;
