--- a/src/sass/_components.scss
+++ b/src/sass/_components.scss
@@ -91,6 +91,16 @@
   background-color: $white;
 }
 
+.cursorUltra {
+    position: absolute;
+  z-index: 100;
+  width: 240px;
+  height: 240px;
+  border-radius: 100%;
+  background-color: $accent;
+  
+}
+
 // CTA
 .cta {
   @include clear-styles;
