--- a/src/sass/_layouts.scss
+++ b/src/sass/_layouts.scss
@@ -86,7 +86,23 @@
     }
   }
 
+  &__img-container {
+    position: relative;
+    border-radius: 100%;
+    overflow: hidden;
+  }
+
   &__img {
+    border-radius: 100%;
+  }
+
+  &__circle {
+    position: absolute;
+    top: 0;
+    right: 50%;
+    width: 100%;
+    height: 100%;
+    background-color: $accent;
     border-radius: 100%;
   }
 
