--- a/src/css/main.css
+++ b/src/css/main.css
@@ -316,9 +316,12 @@ button {
   }
 }
 .hero__img-container {
-  position: relative;
+  z-index: 1;
   border-radius: 100%;
   overflow: hidden;
+}
+.hero__img-container--interactive {
+  clip-path: circle(50% at 50% 50%);
 }
 .hero__img {
   border-radius: 100%;
@@ -463,7 +466,19 @@ button {
 
 .cursor {
   position: absolute;
+  display: grid;
+  place-items: center;
+}
+.cursor__circle--large {
+  position: absolute;
   z-index: 100;
+  inset: 0;
+  border-radius: 100%;
+  background-color: #eeff33;
+}
+.cursor__circle--small {
+  position: absolute;
+  z-index: 101;
   width: 24px;
   height: 24px;
   border-radius: 100%;
