--- a/src/sass/_components.scss
+++ b/src/sass/_components.scss
@@ -31,32 +31,71 @@
 }
 
 // Hamburger Menu
-.hamburger {
-  display: flex;
+
+.hamburger-container {
   position: relative;
-  z-index: 2;
-  width: 36px;
-  height: 3px;
-  background: $white;
+  z-index: 1;
+  // background-color: red;
+  width: 50px;
+  height: 50px;
+  display: grid;
+  place-content: center;
   cursor: pointer;
-  transition: all 0.5s ease-in-out;
+
+  // &:hover {
+  //   .hamburger {
+  //     &:before {
+  //       transform: rotate(0deg) translateX(0px) translateY(-10px);
+  //     }
+  //   }
+  // }
+
+  &:hover {
+    @include view(lg-min) {
+      .hamburger {
+        width: 32px;
+        // opacity: 0.8;
+        &:before,
+        &:after {
+          width: 32px;
+          // opacity: 0.8;
+        }
+      }
+    }
+  }
 
   @include view(lg-min) {
     display: none;
   }
+}
+
+.hamburger {
+  display: flex;
+  position: relative;
+  z-index: 2;
+  width: cross-media(30px, 991px, 36px);
+  height: 3px;
+  background: $white;
+  transition: all 200ms ease-in-out;
+
+  // &:hover {
+  //   &:before {
+  //     transform: rotate(0deg) translateX(0px) translateY(-10px);
+  //   }
+  // }
 
   &:before,
   &:after {
     content: "";
     position: absolute;
-    width: 36px;
+    width: cross-media(30px, 991px, 36px);
     height: 3px;
     background: $white;
-    transition: all 0.5s ease-in-out;
+    transition: all 200ms ease-in-out;
   }
 
   &:before {
-    transform: translateY(-10px);
+    transform:  translateY(-10px);
   }
 
   &:after {
@@ -65,7 +104,13 @@
 
   &--pressed {
     transform: translateX(-50px);
-    background: transparent;
+    background-color: transparent;
+
+    &:hover {
+      &:before {
+        transform: rotate(45deg) translate(35px, -35px);
+      }
+    }
 
     &:before {
       transform: rotate(45deg) translate(35px, -35px);
@@ -75,11 +120,8 @@
       transform: rotate(-45deg) translate(35px, 35px);
     }
   }
-
-  @include view(lg-min) {
-    display: none;
-  }
 }
+
 
 // Custom Cursor
 .cursor {
