--- a/src/sass/_components.scss
+++ b/src/sass/_components.scss
@@ -7,26 +7,27 @@
   inset: 0;
   z-index: 999;
   &__spinner {
-    width: 96px;
-    height: 96px;
+    width: 1px;
+    height: 1px;
     border-radius: 50%;
     display: inline-block;
     position: relative;
-    border: 4px solid $primary;
+    border: 4px solid $black;
     box-sizing: border-box;
+    background-color: $black;
     // animation: rotation 1s linear infinite;
 
-    &::after {
-      content: "";
-      box-sizing: border-box;
-      position: absolute;
-      left: 8px;
-      top: 8px;
-      border: 4px solid $primary;
-      width: 24px;
-      height: 24px;
-      border-radius: 50%;
-    }
+    // &::after {
+    //   content: "";
+    //   box-sizing: border-box;
+    //   position: absolute;
+    //   left: 8px;
+    //   top: 8px;
+    //   border: 4px solid $black;
+    //   width: 24px;
+    //   height: 24px;
+    //   border-radius: 50%;
+    // }
   }
 }
 
