--- a/src/css/main.css
+++ b/src/css/main.css
@@ -350,7 +350,7 @@ button {
 }
 .discover__item:hover .discover__link:before {
   content: "";
-  background-color: #eeff33;
+  clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
 }
 .discover__item:hover .discover__link:after {
   color: #eeff33;
@@ -370,9 +370,10 @@ button {
   left: 0;
   width: clamp(225px, 45.4086781029vw, 450px);
   height: 100%;
-  background-color: transparent;
+  background-color: #eeff33;
   z-index: -1;
-  transition: all ease 300ms;
+  clip-path: polygon(0 0, 0 0, 0 100%, 0% 100%);
+  transition: all ease 400ms;
 }
 .discover__link:after {
   content: "\e900";
